adjusted spacing to prevent letters from flowing off-screen in portrait mode

--- a/src/Gallows.css
+++ b/src/Gallows.css
@@ -10,8 +10,8 @@
   }
   svg {
     height: 52vh;
-    width: 48vw;
-    margin-left: -2vw;
+    width: 52vw;
+    margin-left: -6vw;
   }
 }
 
