--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body{
-	padding: 2.5vh 1.5vh;
+	padding: 2vh 1.5vh;
 }
 
 @font-face {
